--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,7 +1,14 @@
 <div id="home-page">
-  <header></header>
-  <main>
-    <h1>Hello world</h1>
-  </main>
-  <footer></footer>
+  <div class="wrapper">
+    <header></header>
+    <main>
+      <h1>Hello world</h1>
+
+      <div id="calendar" class="calendar">
+        <h1 id="calendar-year" class="calendar__year"></h1>
+        <div id="calendar-days" class="calendar__days"></div>
+      </div>
+    </main>
+    <footer></footer>
+  </div>
 </div>
